--- a/TNL_DPS_Meter/TNL_DPS_Meter.csproj
+++ b/TNL_DPS_Meter/TNL_DPS_Meter.csproj
@@ -5,6 +5,11 @@
     <TargetFramework>net7.0-windows</TargetFramework>
     <Nullable>enable</Nullable>
     <UseWPF>true</UseWPF>
+    <PublishSingleFile>true</PublishSingleFile>
+    <SelfContained>false</SelfContained>
+    <RuntimeIdentifier>win-x64</RuntimeIdentifier>
+    <PublishReadyToRun>true</PublishReadyToRun>
+    <StartupObject>TNL_DPS_Meter.MainWindow</StartupObject>
   </PropertyGroup>
 
 </Project>
